--- a/templates/javascript-learning/section_chatGPT_050925/index.html
+++ b/templates/javascript-learning/section_chatGPT_050925/index.html
@@ -30,7 +30,8 @@
 
       <input id="answerInput" type="text" placeholder="Type your answer" />
       <button id="checkButton">Check</button>
-      
+      <button id="nextButton" style="display: none;">Next</button>
+
       <p id="feedbackArea"></p>
       
 
