--- a/templates/javascript-learning/index.html
+++ b/templates/javascript-learning/index.html
@@ -7,12 +7,12 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge" />
   <title>JavaScript Learning</title>
   <link rel="stylesheet" href="main.css" />
-    <!-- Include Prism.js CSS -->
-    <link href="https://cdnjs.cloudflare.com/ajax/libs/prism/1.25.0/themes/prism.min.css" rel="stylesheet">
-    <!-- Google Font Preconnect-->
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <!-- Google Font Preconnect-->
+  <!-- Include Prism.js CSS -->
+  <link href="https://cdnjs.cloudflare.com/ajax/libs/prism/1.25.0/themes/prism.min.css" rel="stylesheet">
+  <!-- Google Font Preconnect-->
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <!-- Google Font Preconnect-->
   <link href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&display=swap" rel="stylesheet">
   <!--sitewide font-family: 'Lato', sans-serif; -->
 </head>
@@ -48,6 +48,25 @@
     <hr>
     <br>
     <br>
+    <h1>Practice with ChatGPT</h1>
+    <a href="section_chatGPT_quizapp">
+      <h3 class="textUnderline">Quiz App</h3>
+    </a>
+    <a href="section_chatGPT_todolist">
+      <h3 class="textUnderline">Todo List</h3>
+    </a>
+    <a href="section_chatGPT_slider">
+      <h3 class="textUnderline">Slider</h3>
+    </a>
+    <a href="section_chatGPT_dom">
+      <h3 class="textUnderline">DOM</h3>
+    </a>
+    <hr>
+    <br>
+    <br>
+
+
+
 
     <h1>Exercise</h1>
 
@@ -58,19 +77,9 @@
       <h3 class="textUnderline">Data Structure operators</h3>
     </a>
 
+
     <h1>Sections</h1>
-    <a href="section_chatGPT_050925/">
-      <h3 class="textUnderline">Practice with ChatGPT(5.8-Present.25)</h3>
-    </a>
-    <a href="section_chatGPT_050825/">
-      <h3 class="textUnderline">Practice with ChatGPT(5.1-8.25)</h3>
-    </a>
-    <a href="section_chatGPT_043025/">
-      <h3 class="textUnderline">Practice with ChatGPT(4.30.25)</h3>
-    </a>
-    <a href="section_chatGPT_042825/">
-      <h3 class="textUnderline">Practice with ChatGPT(4.28.25)</h3>
-    </a>
+
     <a href="section_two">
       <h3 class="textUnderline">Section 2</h3>
     </a>
