--- a/templates/javascript-learning/index.html
+++ b/templates/javascript-learning/index.html
@@ -49,6 +49,12 @@
     <br>
     <br>
     <h1>Practice with ChatGPT</h1>
+    <a href="section_chatGPT_quotegenerator/">
+      <h3 class="textUnderline">Quote Generator</h3>
+    </a>
+    <a href="section_chatGPT_fetch">
+      <h3 class="textUnderline">fetch()</h3>
+    </a>
     <a href="section_chatGPT_quizapp">
       <h3 class="textUnderline">Quiz App</h3>
     </a>
