--- a/templates/javascript-learning/section_chatGPT_dom/index.html
+++ b/templates/javascript-learning/section_chatGPT_dom/index.html
@@ -11,7 +11,7 @@
 <body class="wrapper">
   <div>
     <div>
-      <h1>Practice with ChatGPT (04/2025) </h1>
+      <h1>Practice with ChatGPT: DOM </h1>
     </div>
 
 
