--- a/templates/javascript-learning/section_chatGPT_quotegenerator/index.html
+++ b/templates/javascript-learning/section_chatGPT_quotegenerator/index.html
@@ -26,12 +26,9 @@
     <br>
 
     <div>
-      <h2>GitHub Profile Lookup</h2>
-
-      <input id="usernameInput" type="text" placeholder="Enter GitHub username" />
-      <button id="searchButton">Search</button>
-
-      <div id="resultArea" style="margin-top: 20px;"></div>
+      <h2>Random Quote Generator</h2>
+      <button id="quoteButton">Get Quote</button>
+      <div id="quoteArea" style="margin-top: 20px;"></div>
 
 
     </div>
