--- a/templates/javascript-learning/index.html
+++ b/templates/javascript-learning/index.html
@@ -49,6 +49,9 @@
     <br>
     <br>
     <h1>Practice with ChatGPT</h1>
+    <a href="section_chatGPT_weatherapp">
+      <h3 class="textUnderline">Weather App</h3>
+    </a>
     <a href="section_chatGPT_quotegenerator/">
       <h3 class="textUnderline">Quote Generator</h3>
     </a>
