--- a/templates/javascript-learning/index.html
+++ b/templates/javascript-learning/index.html
@@ -30,50 +30,53 @@
   <br>
   <main>
     <h1>Projects</h1>
-    <a class="textUnderline"href="project_guess_number">
+    <a class="textUnderline" href="project_guess_number">
       <h3>Guess My Number!</h3>
     </a>
-    <a class="textUnderline"href="project_modal">
+    <a class="textUnderline" href="project_modal">
       <h3>Modal</h3>
     </a>
-    <a class="textUnderline"href="project_pig_game">
+    <a class="textUnderline" href="project_pig_game">
       <h3>Pig Game</h3>
     </a>
-    <a class="textUnderline"href="project_filterable_list">
+    <a class="textUnderline" href="project_filterable_list">
       <h3>A filterable employee list</h3>
     </a>
-    <a class="textUnderline"href="project_todo_list">
+    <a class="textUnderline" href="project_todo_list">
       <h3> Simple To-Do List </h3>
     </a>
     <hr>
     <br>
     <br>
     <h1>Practice with ChatGPT</h1>
+    <a class="textUnderline" href="section_chatGPT_editabletask/">
+      <h3>Editable task/tag relationships (2-way sync)</h3>
+    </a>
     <a class="textUnderline" href="section_chatGPT_tasklist">
       <h3>Task List with Tags (Synced Arrays)</h3>
     </a>
-    <a class="textUnderline"href="section_chatGPT_todo_persistentstate">
+    <a class="textUnderline" href="section_chatGPT_todo_persistentstate">
       <h3>To-Do App with Persistent State</h3>
     </a>
-    <a class="textUnderline"href="section_chatGPT_weatherapp">
+    <a class="textUnderline" href="section_chatGPT_weatherapp">
       <h3>Weather App</h3>
     </a>
-    <a class="textUnderline"href="section_chatGPT_quotegenerator/">
+    <a class="textUnderline" href="section_chatGPT_quotegenerator/">
       <h3>Quote Generator</h3>
     </a>
-    <a class="textUnderline"href="section_chatGPT_fetch">
+    <a class="textUnderline" href="section_chatGPT_fetch">
       <h3 class="">fetch()</h3>
     </a>
-    <a class="textUnderline"href="section_chatGPT_quizapp">
+    <a class="textUnderline" href="section_chatGPT_quizapp">
       <h3 class="">Quiz App</h3>
     </a>
-    <a class="textUnderline"href="section_chatGPT_todolist">
+    <a class="textUnderline" href="section_chatGPT_todolist">
       <h3 class="">Todo List</h3>
     </a>
-    <a class="textUnderline"href="section_chatGPT_slider">
+    <a class="textUnderline" href="section_chatGPT_slider">
       <h3 class="">Slider</h3>
     </a>
-    <a class="textUnderline"href="section_chatGPT_dom">
+    <a class="textUnderline" href="section_chatGPT_dom">
       <h3 class="">DOM</h3>
     </a>
     <hr>
@@ -85,24 +88,24 @@
 
     <h1>Exercise</h1>
 
-    <a class="textUnderline"href="exercise_behind_the_scenes">
+    <a class="textUnderline" href="exercise_behind_the_scenes">
       <h3 class="">Behind the scenes</h3>
     </a>
-    <a class="textUnderline"href="exercise_data_structure_operators">
+    <a class="textUnderline" href="exercise_data_structure_operators">
       <h3 class="">Data Structure operators</h3>
     </a>
 
 
     <h1>Sections</h1>
 
-    <a class="textUnderline"href="section_two">
+    <a class="textUnderline" href="section_two">
       <h3 class="">Section 2</h3>
     </a>
-    <a class="textUnderline"href="section_nine">
+    <a class="textUnderline" href="section_nine">
       <h3 class="">Section 9</h3>
     </a>
 
-    <a class="textUnderline"href="section_ten">
+    <a class="textUnderline" href="section_ten">
       <h3 class="">Section 10</h3>
     </a>
 
