Editable task/tag relationships (2-way sync)

--- a/templates/javascript-learning/index.html
+++ b/templates/javascript-learning/index.html
@@ -65,19 +65,19 @@
       <h3>Quote Generator</h3>
     </a>
     <a class="textUnderline" href="section_chatGPT_fetch">
-      <h3 class="">fetch()</h3>
+      <h3>fetch()</h3>
     </a>
     <a class="textUnderline" href="section_chatGPT_quizapp">
-      <h3 class="">Quiz App</h3>
+      <h3>Quiz App</h3>
     </a>
     <a class="textUnderline" href="section_chatGPT_todolist">
-      <h3 class="">Todo List</h3>
+      <h3>Todo List</h3>
     </a>
     <a class="textUnderline" href="section_chatGPT_slider">
-      <h3 class="">Slider</h3>
+      <h3>Slider</h3>
     </a>
     <a class="textUnderline" href="section_chatGPT_dom">
-      <h3 class="">DOM</h3>
+      <h3>DOM</h3>
     </a>
     <hr>
     <br>
@@ -89,24 +89,24 @@
     <h1>Exercise</h1>
 
     <a class="textUnderline" href="exercise_behind_the_scenes">
-      <h3 class="">Behind the scenes</h3>
+      <h3>Behind the scenes</h3>
     </a>
     <a class="textUnderline" href="exercise_data_structure_operators">
-      <h3 class="">Data Structure operators</h3>
+      <h3>Data Structure operators</h3>
     </a>
 
 
     <h1>Sections</h1>
 
     <a class="textUnderline" href="section_two">
-      <h3 class="">Section 2</h3>
+      <h3>Section 2</h3>
     </a>
     <a class="textUnderline" href="section_nine">
-      <h3 class="">Section 9</h3>
+      <h3>Section 9</h3>
     </a>
 
     <a class="textUnderline" href="section_ten">
-      <h3 class="">Section 10</h3>
+      <h3>Section 10</h3>
     </a>
 
   </main>
