--- a/templates/javascript-learning/main.css
+++ b/templates/javascript-learning/main.css
@@ -189,8 +189,6 @@ a:hover {
   color: var(--Grey700);
 }
 
-
-
 a:link.textUnderline {
   text-decoration-line: underline;
   text-decoration-thickness: 0.06em;
@@ -199,10 +197,10 @@ a:link.textUnderline {
 }
 
 a:link.textUnderline:hover {
-  color: var(--teal800);
+  color: #e7a200;
+  text-decoration: underline;
   /* Ensure underline on hover */
 }
-
 
 
 
