--- a/templates/javascript-learning/index.html
+++ b/templates/javascript-learning/index.html
@@ -83,7 +83,13 @@
     <br>
     <br>
 
-
+    <h1>Practice with ChatGPT - Revisit</h1>
+        <a class="textUnderline" href="section_chatGPT_arrowfunction/">
+      <h3>Arrow function variations & usage</h3>
+    </a>
+    <hr>
+    <br>
+    <br>
 
 
     <h1>Exercise</h1>
@@ -115,7 +121,14 @@
   <!-- Include Prism.js -->
   <script src="https://cdnjs.cloudflare.com/ajax/libs/prism/1.25.0/prism.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/prism/1.25.0/components/prism-javascript.min.js"></script>
-
+  <br>
+  <br>
+  <br>
+  <br>
+    <br>
+  <br>
+  <br>
+  <br>
 </body>
 
 
