live DOM filter

--- a/templates/javascript-learning/index.html
+++ b/templates/javascript-learning/index.html
@@ -84,7 +84,10 @@
     <br>
 
     <h1>Practice with ChatGPT - Revisit</h1>
-        <a class="textUnderline" href="section_chatGPT_arrowfunction/">
+    <a class="textUnderline" href="section_chatGPT_domfilter/">
+      <h3>DOM filter</h3>
+    </a>
+    <a class="textUnderline" href="section_chatGPT_arrowfunction/">
       <h3>Arrow function variations & usage</h3>
     </a>
     <hr>
@@ -125,7 +128,7 @@
   <br>
   <br>
   <br>
-    <br>
+  <br>
   <br>
   <br>
   <br>
