--- a/templates/javascript-learning/index.html
+++ b/templates/javascript-learning/index.html
@@ -49,6 +49,9 @@
     <br>
     <br>
     <h1>Practice with ChatGPT</h1>
+    <a class="textUnderline" href="section_chatGPT_domfilter/">
+      <h3>DOM filter</h3>
+    </a>
     <a class="textUnderline" href="section_chatGPT_editabletask/">
       <h3>Editable task/tag relationships (2-way sync)</h3>
     </a>
@@ -84,8 +87,8 @@
     <br>
 
     <h1>Practice with ChatGPT - Revisit</h1>
-    <a class="textUnderline" href="section_chatGPT_domfilter/">
-      <h3>DOM filter</h3>
+    <a class="textUnderline" href="section_chatGPT_methods/">
+      <h3>Methods</h3>
     </a>
     <a class="textUnderline" href="section_chatGPT_arrowfunction/">
       <h3>Arrow function variations & usage</h3>
