--- a/templates/javascript-learning/index.html
+++ b/templates/javascript-learning/index.html
@@ -49,6 +49,12 @@
     <br>
     <br>
     <h1>Practice with ChatGPT</h1>
+    <a class="textUnderline" href="section_chatGPT_tag_formatter/">
+      <h3>Tag formatter</h3>
+    </a>
+    <a class="textUnderline" href="section_chatGPT_tag/">
+      <h3>Make a tag input field</h3>
+    </a>
     <a class="textUnderline" href="section_chatGPT_domfilter/">
       <h3>DOM filter</h3>
     </a>
