--- a/templates/javascript-learning/section_chatGPT_tag_formatter/index.html
+++ b/templates/javascript-learning/section_chatGPT_tag_formatter/index.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-  <title>Methods</title>
+  <title>Practice with ChatGPT: Editable task/tag relationships (2-way sync)</title>
 
 
   <!-- Google Font Preconnect-->
@@ -20,72 +20,18 @@
 
 <body class="wrapper">
   <div class="marginS">
-    <h1>Practice with ChatGPT: Methods
-
-    </h1>
-
-
+    <h1>Practice with ChatGPT: Hashtag</h1>
 
 
     <hr>
-
     <br>
 
+    <input id="tagInput" placeholder="Type tags, separated by commas" />
+    <button id="tagButton">Add Tags</button>
+    <p id="tagOutput"></p>
 
 
-    <br>
 
-
-    <h2>slice()</h2>
-
-    <ul id="updateSentence"></ul>
-    <br>
-
-    <hr>
-
-    <br>
-    <h2>split()</h2>
-    <ul id="colorArray"></ul>
-    <br>
-
-    <hr>
-
-    <br>
-    <h2>join()</h2>
-    <ul id="fruitText"></ul>
-    <br>
-
-    <hr>
-
-    <br>
-    <h2>split() → edit → join()</h2>
-    <p id="animalText"></p>
-
-    <br>
-
-
-    <hr>
-
-    <br>
-    <h2>Input → List </h2>
-
-
-    <input id="userInput" placeholder="Type items, separated by commas" />
-    <button id="convertButton">Convert</button>
-    <ul id="resultList"></ul>
-
-    <br>
-
-
-    <hr>
-
-    <br>
-    <h2>Input → List (rewrite)</h2>
-
-
-    <input id="enteredValue" placeholder="Type items, separated by commas" />
-    <button id="button">Convert</button>
-    <ul id="returnedList"></ul>
 
   </div>
 
