--- a/templates/javascript-learning/index.html
+++ b/templates/javascript-learning/index.html
@@ -93,8 +93,11 @@
     <br>
 
     <h1>Practice with ChatGPT - Revisit</h1>
-    <a class="textUnderline" href="section_chatGPT_methods/">
-      <h3>Methods</h3>
+        <a class="textUnderline" href="section_chatGPT_methodsii/">
+      <h3>Methods ii</h3>
+    </a>
+    <a class="textUnderline" href="section_chatGPT_methodsi/">
+      <h3>Methods i</h3>
     </a>
     <a class="textUnderline" href="section_chatGPT_arrowfunction/">
       <h3>Arrow function variations & usage</h3>
