--- a/templates/javascript-learning/index.html
+++ b/templates/javascript-learning/index.html
@@ -49,6 +49,9 @@
     <br>
     <br>
     <h1>Practice with ChatGPT</h1>
+        <a class="textUnderline" href="section_chatGPT_mapdom_rendering/">
+      <h3>Map → DOM</h3>
+    </a>
     <a class="textUnderline" href="section_chatGPT_tag_formatter/">
       <h3>Tag formatter</h3>
     </a>
@@ -92,7 +95,7 @@
     <br>
     <br>
 
-    <h1>Practice with ChatGPT - Revisit</h1>
+    <h1>Practice with ChatGPT - Refresh</h1>
         <a class="textUnderline" href="section_chatGPT_methodsii/">
       <h3>Methods ii</h3>
     </a>
