--- a/templates/javascript-learning/index.html
+++ b/templates/javascript-learning/index.html
@@ -49,9 +49,7 @@
     <br>
     <br>
     <h1>Practice with ChatGPT</h1>
-        <a class="textUnderline" href="section_chatGPT_mapdom_rendering/">
-      <h3>Map → DOM</h3>
-    </a>
+
     <a class="textUnderline" href="section_chatGPT_tag_formatter/">
       <h3>Tag formatter</h3>
     </a>
@@ -88,18 +86,21 @@
     <a class="textUnderline" href="section_chatGPT_slider">
       <h3>Slider</h3>
     </a>
-    <a class="textUnderline" href="section_chatGPT_dom">
-      <h3>DOM</h3>
+        <a class="textUnderline" href="section_chatGPT_dom_ii/">
+      <h3>DOM ii</h3>
+    </a>
+    <a class="textUnderline" href="section_chatGPT_dom_i">
+      <h3>DOM i</h3>
     </a>
     <hr>
     <br>
     <br>
 
     <h1>Practice with ChatGPT - Refresh</h1>
-        <a class="textUnderline" href="section_chatGPT_methodsii/">
+    <a class="textUnderline" href="section_chatGPT_methods_ii/">
       <h3>Methods ii</h3>
     </a>
-    <a class="textUnderline" href="section_chatGPT_methodsi/">
+    <a class="textUnderline" href="section_chatGPT_methods_i/">
       <h3>Methods i</h3>
     </a>
     <a class="textUnderline" href="section_chatGPT_arrowfunction/">
