--- a/templates/javascript-learning/section_chatGPT_dom_ii/index.html
+++ b/templates/javascript-learning/section_chatGPT_dom_ii/index.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-  <title>Map → DOM</title>
+  <title>DOM ii</title>
 
 
   <!-- Google Font Preconnect-->
@@ -20,7 +20,7 @@
 
 <body class="wrapper">
   <div class="marginS">
-    <h1>Practice with ChatGPT: Map → DOM
+    <h1>Practice with ChatGPT: DOM ii
 
     </h1>
 
@@ -49,6 +49,8 @@
     <br>
     <br>
     <hr>
+    <br>
+    <br>
 
 
     <p id="secret">This is a secret message.</p>
@@ -57,9 +59,27 @@
     <br> <br>
 
     <hr>
+    <br>
+    <br>
 
-    <ul id="taskList"></ul>
     <button id="addTask">Add Task</button>
+    <ul id="taskList"></ul>
+
+
+
+    <hr>
+    <br>
+    <input id="itemInput" type="text" placeholder="Enter item" />
+    <button id="addItem">Add</button>
+    <ul id="itemList"></ul>
+
+
+    <br>
+    <br>
+    <hr>
+    <br>
+
+    <button id="themeToggle">🌙 Toggle Theme</button>
 
     <br>
     <br>
