--- a/templates/javascript-learning/section_chatGPT_dom_iii/index.html
+++ b/templates/javascript-learning/section_chatGPT_dom_iii/index.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-  <title>DOM ii</title>
+  <title>DOM iii</title>
 
 
   <!-- Google Font Preconnect-->
@@ -20,76 +20,24 @@
 
 <body class="wrapper">
   <div class="marginS">
-    <h1>Practice with ChatGPT: DOM ii
-
-    </h1>
+    <h1>Practice with ChatGPT: DOM iii</h1>
 
 
 
 
-    <hr>
-
-    <br>
-
-
-
-    <ul id="fruitList"></ul>
-
-    <br>
-
-    <p id="statusText">Waiting...</p>
-
-
-    <br>
 
     <hr>
 
 
-    <p id="statusText1">Loaded ✅</p>
     <br>
-    <br>
-    <hr>
-    <br>
-    <br>
+    <h1 id="countDisplay">0</h1>
+    <button id="startBtn">Start</button>
+    <button id="stopBtn">Stop</button>
+    <button id="resetBtn">Reset</button>
 
-
-    <p id="secret">This is a secret message.</p>
-    <button id="toggleBtn">Toggle</button>
-
-    <br> <br>
-
-    <hr>
-    <br>
     <br>
 
-    <button id="addTask">Add Task</button>
-    <ul id="taskList"></ul>
-
-
-
-    <hr>
     <br>
-    <input id="itemInput" type="text" placeholder="Enter item" />
-    <button id="addItem">Add</button>
-    <ul id="itemList"></ul>
-
-
-    <br>
-    <br>
-    <hr>
-    <br>
-
-    <button id="themeToggle">🌙 Toggle Theme</button>
-
-    <br>
-    <hr>
-
-
-    <button id="themeToggle1">🌙 Toggle Theme</button>
-
-    <br>
-    <br>
-
 
   </div>
 
