--- a/templates/javascript-learning/index.html
+++ b/templates/javascript-learning/index.html
@@ -86,7 +86,10 @@
     <a class="textUnderline" href="section_chatGPT_slider">
       <h3>Slider</h3>
     </a>
-        <a class="textUnderline" href="section_chatGPT_dom_ii/">
+    <a class="textUnderline" href="section_chatGPT_dom_ii/">
+      <h3>DOM iii</h3>
+    </a>
+    <a class="textUnderline" href="section_chatGPT_dom_ii/">
       <h3>DOM ii</h3>
     </a>
     <a class="textUnderline" href="section_chatGPT_dom_i">
