--- a/templates/javascript-learning/index.html
+++ b/templates/javascript-learning/index.html
@@ -49,7 +49,9 @@
     <br>
     <br>
     <h1>Practice with ChatGPT</h1>
-
+    <a class="textUnderline" href="section_chatGPT_timer/">
+      <h3>⏱️ Timer / Counter </h3>
+    </a>
     <a class="textUnderline" href="section_chatGPT_tag_formatter/">
       <h3>Tag formatter</h3>
     </a>
@@ -86,9 +88,7 @@
     <a class="textUnderline" href="section_chatGPT_slider">
       <h3>Slider</h3>
     </a>
-    <a class="textUnderline" href="section_chatGPT_dom_ii/">
-      <h3>DOM iii</h3>
-    </a>
+
     <a class="textUnderline" href="section_chatGPT_dom_ii/">
       <h3>DOM ii</h3>
     </a>
