--- a/templates/javascript-learning/section_chatGPT_timer/index.html
+++ b/templates/javascript-learning/section_chatGPT_timer/index.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-  <title>DOM iii</title>
+  <title>⏱️ Timer / Counter</title>
 
 
   <!-- Google Font Preconnect-->
@@ -20,7 +20,7 @@
 
 <body class="wrapper">
   <div class="marginS">
-    <h1>Practice with ChatGPT: DOM iii</h1>
+    <h1>Practice with ChatGPT: ⏱️ Timer / Counter</h1>
 
 
 
