Lap Recording Stopwatch

--- a/templates/javascript-learning/index.html
+++ b/templates/javascript-learning/index.html
@@ -49,6 +49,9 @@
     <br>
     <br>
     <h1>Practice with ChatGPT</h1>
+        <a class="textUnderline" href="section_chatGPT_timer_lap/">
+      <h3>⏱️ Lap Recording Stopwatch </h3>
+    </a>
     <a class="textUnderline" href="section_chatGPT_timer/">
       <h3>⏱️ Timer / Counter </h3>
     </a>
