⏱️ Lap Recording Stopwatch

--- a/templates/javascript-learning/section_chatGPT_timer_lap/index.html
+++ b/templates/javascript-learning/section_chatGPT_timer_lap/index.html
@@ -33,7 +33,11 @@
     <div>
       <h1 id="display">0</h1>
       <button id="startBtn">▶️ Start</button>
-      <button id="stopBtn">⏹ Stop</button>
+      <button id="pauseBtn">⏸ Pause</button>
+  <!--       <button id="stopBtn">⏹ Stop</button>
+ -->
+
+
       <button id="lapBtn">📍 Lap</button>
       <button id="resetBtn">🔄 Reset</button>
       <ul id="laps"></ul>
