--- a/templates/javascript-learning/index.html
+++ b/templates/javascript-learning/index.html
@@ -49,7 +49,10 @@
     <br>
     <br>
     <h1>Practice with ChatGPT</h1>
-        <a class="textUnderline" href="section_chatGPT_timer_lap/">
+    <a class="textUnderline" href="section_chatGPT_pomodoro/">
+      <h3>⏱️ Pomodoro timer </h3>
+    </a>
+    <a class="textUnderline" href="section_chatGPT_timer_lap/">
       <h3>⏱️ Lap Recording Stopwatch </h3>
     </a>
     <a class="textUnderline" href="section_chatGPT_timer/">
